--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --config webpack.config.js"
+    "clean": "rm -rf dist",
+    "serve": "webpack-dev-server --color --progress --open",
+    "build": "npm run clean && NODE_ENV=production webpack"
   },
   "repository": {
     "type": "git",
@@ -19,9 +21,15 @@
   "homepage": "https://github.com/dalarm/innovator#readme",
   "devDependencies": {
     "@grpc/proto-loader": "^0.5.3",
+    "css-loader": "^3.3.0",
     "grpc": "^1.24.2",
     "grpc-tools": "^1.8.0",
+    "html-webpack-plugin": "^3.2.0",
+    "postcss-loader": "^3.0.0",
+    "style-loader": "^1.0.1",
     "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10"
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.9.0",
+    "win-node-env": "^0.4.0"
   }
 }
