--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rm -rf dist",
     "serve": "webpack-dev-server --color --progress --open",
-    "build": "npm run clean && NODE_ENV=production webpack"
+    "build": "npm run clean && webpack --env=production"
   },
   "repository": {
     "type": "git",
@@ -29,7 +29,6 @@
     "style-loader": "^1.0.1",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.9.0",
-    "win-node-env": "^0.4.0"
+    "webpack-dev-server": "^3.9.0"
   }
 }
